--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,6 +1,13 @@
-<% notifications = @notifications.where.not(visitor_id: current_user.id) %>
-<% if notifications.exists? %>
-    <%= render notifications %>
-<% else %>
-    <p>通知はございません</p>
-<% end %>
+<% provide(:title, "通知") %>
+<div class="background-color">
+  <div class="container">
+  <h5 class="font-weight-bold notification-heading">通知</h5><hr>
+    <% notifications = @notifications.where.not(visitor_id: current_user.id) %>
+    <% if notifications.exists? %>
+        <%= render notifications %>
+    <% else %>
+        <p>通知はございません</p>
+    <% end %>
+  </div>
+  <div class="footer-space"></div>
+</div>
