--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -12,7 +12,7 @@
       <% @messages.each do |m| %>
         <div class="row">
           <div class="col-lg-12">
-            <%= image_tag m.user.image.url, :size =>'30x30', class: "message-user" %>
+            <%= image_tag m.user.image.url, :size =>'30x30', class: "small-user" %>
             <%= m.user.username %>
           </div>
           <div class="col-lg-12">
