add notifications destroy function

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -769,6 +769,10 @@ footer {
   display: inline-block;
 }
 
+.notificatin-delete {
+  color: $btn-color;
+}
+
 
 
 @media screen and (max-width: 992px){
