--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -780,6 +780,7 @@ footer {
     padding-top: 10px;
     .header-tag {
       padding-left: 0;
+      margin: 0;
     }
     .notification {
       padding-left: 0;
