fix to deploy to aws

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar text-white bg-header sticky-top">
   <nav class="navbar navbar-expand-lg navbar-light container">
     <%= link_to root_path do %>
-      <%= image_tag "sharemusic_logo.png", width: "150px" %>
+      <%= image_tag "/images/sharemusic_logo.png", width: "150px" %>
     <% end %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
