--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -79,7 +79,7 @@ li {
 
 /*homepage*/
 .jumbotron { 
-  background: url(/images/sharemusic_top.jpg) center no-repeat; background-size: cover;
+  background: url('/images/sharemusic_top.jpg') center no-repeat; background-size: cover;
   margin-bottom: 0;
   padding: 0;
   height: 1000px;
